--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{ background-color:#222; margin:0; padding:0;}
         </tr>
     </table>
 
-    <script type='text/javascript' src='blob/c5ab1828fb2702ccda645b90b07c97db45a20579/EducationalSimulation.js'></script>
+    <script type='text/javascript' src='EducationalSimulation.js'></script>
 
     <script>
             _Game.Start(divMyGame);
