--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body{ background-color:#222; margin:0; padding:0;}
         </tr>
     </table>
 
-    <script type='text/javascript'href='https://rawcdn.githack.com/quanha22/quanha22.github.io/main/EducationalSimulation.js'></script>
+    <script type='text/javascript'href='https://rawcdn.githack.com/quanha22/quanha22.github.io/main/circle.js'></script>
 
     <script>
             _Game.Start(divMyGame);
