--- a/index.html
+++ b/index.html
@@ -35,7 +35,26 @@ body{ background-color:#222; margin:0; padding:0;}
         </tr>
     </table>
 
-    <script type='text/javascript'href='https://rawcdn.githack.com/quanha22/quanha22.github.io/main/Circle.js'></script>
+    <script type='text/javascript'>
+    
+    function draw()
+  {
+var canvas = document.getElementById('circle');
+if (canvas.getContext)
+{
+var ctx = canvas.getContext('2d'); 
+var X = canvas.width / 2;
+var Y = canvas.height / 2;
+var R = 45;
+ctx.beginPath();
+ctx.arc(X, Y, R, 0, 2 * Math.PI, false);
+ctx.lineWidth = 3;
+ctx.strokeStyle = '#FF0000';
+ctx.stroke();
+}
+}
+    
+    </script>
 
     <script>
             _Game.Start(divMyGame);
