--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
         </tr>
         <tr>
             <td>
-                <input type="button" class="btn btn2" value="Restart Game" onclick="_Game.Start(divMyGame);" />
+                <script src=Circle.js></script>
+                <!-- <input type="button" class="btn btn2" value="Restart Game" onclick="_Game.Start(divMyGame);" /> -->
             </td>
         </tr>
     </table>
 
-    <script src=Circle.js></script>
+    <!-- <script src=Circle.js></script> -->
 
     <!-- <script>
             _Game.Start(divMyGame);
