--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     #divMyGame canvas { outline: none;background-color: #000;}
     .CssTable{background-color:#050505; text-align:center; width:100%; border: 1px solid teal; }
     .CssTable td{ border: 1px solid chartreuse; }
-    .btn {background-color: #0000ff; /* #4CAF50 Green */border: none;color: white;padding: 16px 32px;text-align: center;text-decoration: none;display: inline-block;font-size: 16px;margin: 4px 2px;transition-duration: 0.4s;cursor: pointer;}
+    .btn {background-color: #4CAF50; /* Green */border: none;color: white;padding: 16px 32px;text-align: center;text-decoration: none;display: inline-block;font-size: 16px;margin: 4px 2px;transition-duration: 0.4s;cursor: pointer;}
     .btn1 {background-color: white; color: black; border: 2px solid #4CAF50;}
     .btn1:hover {background-color: #4CAF50;color: white;}
     .btn2 {background-color: white; color: black; border: 2px solid #008CBA;}
@@ -35,15 +35,13 @@
         </tr>
         <tr>
             <td>
-                <script src=Circle.js></script>
-                <!-- <input type="button" class="btn btn2" value="Restart Game" onclick="_Game.Start(divMyGame);" /> -->
+               <input type="button" class="btn btn2" value="Restart Game" onclick="_Game.Start(divMyGame);" />
             </td>
         </tr>
     </table>
 
-    <!-- <script src=Circle.js></script> -->
-
-    <!-- <script>
+<script src="EducationalSimulation.js"></script>
+   <script>
             _Game.Start(divMyGame);
             function _Full_Width() {
                 divMyGame.firstChild.style.width = "100%";
@@ -60,6 +58,6 @@
                 divMyGame.firstChild.style.height = "";
                 divMyGame.scrollIntoView();
             }
-    </script> -->
+    </script>
 </body>
 </html>
