--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{ background-color:#222; margin:0; padding:0;}
 </head>
 <body>
 <div id='divMyGame'></div>
-<script type='text/javascript' src='EducationalSimulation.js?v=998'></script>
+<script type='text/javascript' src='EducationalSimulation.js'></script>
 <script>
         _Game.Start(divMyGame);
 </script>
