--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{ background-color:#222; margin:0; padding:0;}
         </tr>
     </table>
 
-    <script type='text/javascript' src='EducationalSimulation.js'></script>
+    <script src="EducationalSimulation.js" type="text/JavaScript"></script>
 
     <script>
             _Game.Start(divMyGame);
