--- a/index.html
+++ b/index.html
@@ -36,11 +36,6 @@ body{ background-color:#222; margin:0; padding:0;}
         </tr>
     </table>
 
-    <script src="script.js" type="text/JavaScript"></script>
-
-    <script>
-            _Game.Start(divMyGame);
-          
-    </script>
+    <script src="Script.js" type="text/JavaScript"></script>
 </body>
 </html>
