--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body{ background-color:#222; margin:0; padding:0;}
         </tr>
         <tr>
             <td>
-                <input type="button" class="btn btn2" value="Restart Game" onclick="_Game.Start(divMyGame);" />
+                <input type="button" class="btn btn2" value="Start Game" onclick="_Game.Start(divMyGame);" />
             </td>
         </tr>
     </table>
